--- a/Docker labs/Docker Compose/compose.yml
+++ b/Docker labs/Docker Compose/compose.yml
@@ -1,27 +1,28 @@
-version: '3.8'  
+version: '3.8'
 
-services:  
-  web:  
-    image: nginx  
+services:
+  web:
+    image: nginx
     ports:
       - "80:80"
     networks:
       - frontend
       - fullstack
-    
 
   db:
-    image: mysql:5.7 
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     networks:
       - backend
       - fullstack
     volumes:
-      - db_data:/var/lib/mysql  
+      - db_data:/var/lib/mysql
 
-networks:  
-  frontend:  
-  backend:  
+networks:
+  frontend:
+  backend:
   fullstack:
 
-volumes:  
-  db_data:  
+volumes:
+  db_data:
