--- a/K8s labs/Lab2/(9-10)Deploy and quota 2/pods.yml
+++ b/K8s labs/Lab2/(9-10)Deploy and quota 2/pods.yml
@@ -8,7 +8,7 @@ spec:
   - name: app
     image: alpine
     command: ["/bin/sh", "-c"]
-    resources: #must be specified as the quota is specified in the namespace
+    resources: #must be specified as the quota is specified in the namespace and no limit range created to be default
       requests:
         memory: "200Mi"
       limits:
